# autonomos-lab

./: .env.example  .env.template  .gitignore  API_REFERENCE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  README.md  SECURITY.md  entrypoint.sh  main.py  pre_deploy_cleanup.sh  pyproject.toml  railway.json  research_main.py  run.py  slack_main.py  test_multi_bolt.py  test_slack_bolt.py
adapters/: github_integration.py  slack_integration.py
agents/: __init__.py  base_agent.py  hackathon_strategist.py  memory_system.py  project_strategist.py  search_research_agent.py
agents/gcp_integration/: README.md  __init__.py  pyproject.toml
agents/gcp_integration/src/gcp_integration/: __init__.py  oauth_config.py  oauth_flow.py  workspace_loader.py
agents/gcp_integration/src/gcp_integration/templates/: credentials.json.example  temp_token.json.example
api/: api_manager.py  endpoint_registry.py  huggingface_api.py  llm_provider_router.py  response_parser.py  retry_handler.py
cli/: __init__.py  agent_cli.py  credential_manager.py
config/: config_isolation.py
core/: ab_test_manager.py  agent_factory.py  cognitive_patterns.py  config_manager.py  context_manager.py  cost_optimizer.py  error_handler.py  experiment_tracker.py  experimentation.py  failover_strategy.py  feedback_collector.py  interaction_analyzer.py  memory_manager.py  model_version_manager.py  performance_comparer.py  prompt_composer.py  prompt_evaluator.py  prompt_template.py  quota_manager.py  rate_limiter.py  resource_allocator.py  response_improver.py  structured_logger.py  tenant_manager.py  token_tracker.py  tool_registry.py
memory-bank/: AGENT_CONFIGURATION.md  ARCHITECTURE.md  COMMIT_FORMAT.md  CREDENTIAL_MANAGEMENT.md  CREDENTIAL_RECOVERY.md  LICENSE.md  MEMORY_SYSTEM.md  RESEARCH_AGENT_CONNECTIVITY.md  RESEARCH_AGENT_OVERVIEW.md  activeContext.md  agent_architecture.md  credential_management_comprehensive.md  current_context.md  gcp_integration.md  hito_uno.md  improvements.md  productContext.md  product_context.md  progress.md  project_brief.md  project_update_log.md  projectbrief.md  systemContext.md  system_context.md  techContext.md  tech_context.md
metrics/: tenant_metrics.py
migrations/: data_migration_pipeline.py  schema_versioner.py
personalities/: personality_components.py
scripts/: README.md  validate_commit_msg.py  view_workspace_documents.py
security/: credential_store.py  input_sanitizer.py  permission_system.py  pii_handler.py
slack/: __init__.py  agent_registry.py  base_adapter.py  (+3 more)
(+24 files in other folders)
