[tool.pytest.ini_options]
addopts = "-p no:mock"

[tool.poetry]
name = "autonomos-ai"
version = "0.1.0"
description = "Advanced AI Memory System for Autonomos"
authors = ["Cesar Augusto <cesar@autonomos.ai>"]

[tool.poetry.dependencies]
python = "^3.10"
llama-index = "^0.9.0"
langchain = "^0.1.0"
sentence-transformers = "^2.2.0"
groq = "^0.3.0"
slack-sdk = "^3.19.5"
chromadb = "^0.4.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0"
anthropic = "^0.7.0"
flask = "^2.3.0"
[tool.pytest.ini_options]
addopts = "-p no:mock"

[tool.poetry]
name = "autonomos-ai"
version = "0.1.0"
description = "Advanced AI Memory System for Autonomos"
authors = ["Cesar Augusto <cesar@autonomos.ai>"]

[tool.pytest.ini_options]
addopts = "-p no:mock"

[tool.poetry]
name = "autonomos-ai"
version = "0.1.0"
description = "Advanced AI Memory System for Autonomos"
authors = ["Cesar Augusto <cesar@autonomos.ai>"]

[tool.poetry.dependencies]
python = "^3.10"
llama-index = "^0.9.0"
langchain = "^0.1.0"
sentence-transformers = "^2.2.0"
groq = "^0.3.0"
slack-sdk = "^3.19.5"
chromadb = "^0.4.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0"
anthropic = "^0.7.0"
[tool.pytest.ini_options]
addopts = "-p no:mock"

[tool.poetry]
name = "autonomos-ai"
version = "0.1.0"
description = "Advanced AI Memory System for Autonomos"
authors = ["Cesar Augusto <cesar@autonomos.ai>"]

[tool.pytest.ini_options]
addopts = "-p no:mock"

[tool.poetry]
name = "autonomos-ai"
version = "0.1.0"
description = "Advanced AI Memory System for Autonomos"
authors = ["Cesar Augusto <cesar@autonomos.ai>"]

[tool.poetry.dependencies]
python = "^3.10"
llama-index = "^0.9.0"
langchain = "^0.1.0"
sentence-transformers = "^2.2.0"
groq = "^0.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
